--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,6 @@
 # ignore everything in the root except the "wp-content" directory.
 /*
 !wp-content/
-!wp-config.php
 
 # ignore all files starting with .
 .*
@@ -89,7 +88,7 @@ Thumbs.db
 wp-content/*
 !wp-content/mu-plugins/
 !wp-content/plugins/
-!wp-content/themes/
+!wp-content/themes/wpclt
  
 # ignore these plugins
 wp-content/plugins/hello.php
