--- a/.gitignore
+++ b/.gitignore
@@ -87,8 +87,8 @@ Thumbs.db
 # "themes" directory
 wp-content/*
 !wp-content/mu-plugins/
-!wp-content/plugins/wpclt*/
-!wp-content/themes/wpclt*/
+!wp-content/plugins/
+!wp-content/themes/
  
 # ignore these plugins
 wp-content/plugins/hello.php
